// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Atoms/Expandingline Default smoke-test 1`] = `
<div class="bg-black text-orange-100  font-sans">
  <div class="bg-slate-800 dark:bg-slate-300 h-1 w-full"
       style="max-width: 100%;"
  >
  </div>
</div>
`;

exports[`Atoms/Expandingline Reverse smoke-test 1`] = `
<div class="bg-black text-orange-100  font-sans">
  <div class="bg-slate-800 dark:bg-slate-300 h-1 w-full"
       style="margin-left: auto; max-width: 100%;"
  >
  </div>
</div>
`;
